# RHCR

./: .gitignore  CMakeLists.txt  Makefile  lifelong  run_diag.sh
.claude/: CLAUDE.md
analysis/: agg.json  analysis.md  analysis_ablation_engineering_100seed.md  analysis_budget_sweep.md  analysis_budget_sweep_100seed.md  analysis_ecbssection_asymmetry.md  analysis_fallback_rate.md  analysis_hsweep_100seed.md  analysis_main_3way.md  analysis_msweep_100seed.md  analysis_statistical.md  analysis_w5m_final.md  analysis_w5m_interim.md  analysis_wsweep_100seed.md  budget_agg.json  deep_analysis.py  final_agg.json  interim_m700.csv
benchmark/: analyze_paper_tables.py  make_comparison.py  quick_compare_improved_baseline.py  reparse.py  run_ablation_engineering_100seed.py  run_benchmark.py  run_budget_sweep.py  run_budget_sweep_100seed.py  run_ecbs_asymmetry_100seed.py  run_ecbs_section_only.py  run_ecbs_vs_pbs.py  run_final_compare.py  run_full_compare.py  run_h_sweep_100seed.py  run_m_sweep.py  run_m_sweep_100seed.py  run_pbs_only.py  run_w5m_sweep.py  run_w_sweep.py  run_w_sweep_100seed.py
benchmark_results_ablation_engineering/: per_run.csv  summary.csv  summary.txt
benchmark_results_budget100/: per_run.csv  summary.csv  summary.txt
benchmark_results_ecbs_asymmetry/: per_run.csv  summary.csv  summary.txt
benchmark_results_hsweep100/: per_run.csv  summary.csv  summary.txt
benchmark_results_msweep/: comparison.xlsx  per_run.csv  summary.csv  summary.txt
benchmark_results_msweep100/: per_run.csv  summary.csv  summary.txt
benchmark_results_w5msweep/: per_run.csv  (+3 more)
(+44 files in other folders)
